# src/entity/User.js
@@ -1,0 +1,91 @@
+"use strict";
+var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
+    var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
+    if (typeof Reflect === "object" && typeof Reflect.decorate === "function") r = Reflect.decorate(decorators, target, key, desc);
+    else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
+    return c > 3 && r && Object.defineProperty(target, key, r), r;
+};
+var __metadata = (this && this.__metadata) || function (k, v) {
+    if (typeof Reflect === "object" && typeof Reflect.metadata === "function") return Reflect.metadata(k, v);
+};
+Object.defineProperty(exports, "__esModule", { value: true });
+exports.User = void 0;
+var typeorm_1 = require("typeorm");
+var User = /** @class */ (function () {
+    function User() {
+    }
+    __decorate([
+        (0, typeorm_1.PrimaryGeneratedColumn)(),
+        __metadata("design:type", Number)
+    ], User.prototype, "id", void 0);
+    __decorate([
+        (0, typeorm_1.Column)(),
+        __metadata("design:type", String)
+    ], User.prototype, "name", void 0);
+    __decorate([
+        (0, typeorm_1.Column)(),
+        __metadata("design:type", String)
+    ], User.prototype, "email", void 0);
+    __decorate([
+        (0, typeorm_1.Column)(),
+        __metadata("design:type", String)
+    ], User.prototype, "password", void 0);
+    __decorate([
+        (0, typeorm_1.Column)(),
+        __metadata("design:type", String)
+    ], User.prototype, "salt", void 0);
+    __decorate([
+        (0, typeorm_1.Column)(),
+        __metadata("design:type", String)
+    ], User.prototype, "image", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({ nullable: true, type: 'timestamp' }) // Example nullable column with timestamp type
+        ,
+        __metadata("design:type", Date)
+    ], User.prototype, "createdAt", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({
+            type: 'timestamp',
+            default: function () { return 'CURRENT_TIMESTAMP'; }, // Default value set to current timestamp
+            onUpdate: 'CURRENT_TIMESTAMP', // On update also set to current timestamp
+        }),
+        __metadata("design:type", Date)
+    ], User.prototype, "updatedAt", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({ nullable: true }),
+        __metadata("design:type", String)
+    ], User.prototype, "resetPasswordToken", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({ nullable: true }),
+        __metadata("design:type", Date)
+    ], User.prototype, "resetPasswordExpires", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({ nullable: true }),
+        __metadata("design:type", String)
+    ], User.prototype, "twoFactorToken", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({ nullable: true }),
+        __metadata("design:type", Date)
+    ], User.prototype, "twoFactorExpires", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({ default: false }),
+        __metadata("design:type", Boolean)
+    ], User.prototype, "twoFactorEnabled", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({ default: 1 }),
+        __metadata("design:type", Number)
+    ], User.prototype, "accountStatus", void 0);
+    __decorate([
+        (0, typeorm_1.Column)({
+            type: 'enum',
+            enum: ['admin', 'institution', 'researcher', 'explorer'],
+            default: 'explorer', // Example default role
+        }),
+        __metadata("design:type", String)
+    ], User.prototype, "role", void 0);
+    User = __decorate([
+        (0, typeorm_1.Entity)()
+    ], User);
+    return User;
+}());
+exports.User = User;
