# swagger.json
@@ -838,11 +838,16 @@
                   "email": {
                     "type": "string",
                     "description": "Email address of the user"
+                  },
+                  "password": {
+                    "type": "string",
+                    "description": "Password for the user"
                   }
                 },
                 "example": {
                   "username": "john_doe",
-                  "email": "john.doe@example.com"
+                  "email": "john.doe@example.com",
+                  "password": "securePassword123"
                 }
               }
             }
